# peek

./: .oxlintrc.json  CLAUDE.md  README.md  fix-certificates.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/plans/: the-editor-used-to-lucky-cascade.md
.github/: build.yml
.github/workflows/: build-macos.yml
docs/: GITHUB_ACTIONS_SETUP.md  MULTI_DATABASE_ARCHITECTURE.md  lsp.md  mcp.md  multiplayer.md  releases.md
scripts/: release.mjs
src/: App.css  App.tsx  TldrawUi.tsx  state.ts
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/lsp/: Cargo.toml  build.rs
src-tauri/crates/lsp/src/: _dump_tree.rs  backend.rs  context.rs  diagnostics.rs  documents.rs  lib.rs  parser.rs  position.rs  query_info.rs  schema.rs  scope.rs
src-tauri/crates/lsp/src/completion/: fk_inference.rs  keywords.rs  mod.rs  tests.rs
src-tauri/crates/mcp/: Cargo.toml
src-tauri/crates/mcp/src/: bridge.rs  connection.rs  nodes.rs  pages.rs  reply.rs  schema.rs  server.rs  view.rs
src-tauri/icons/: icon.icns
src-tauri/src/: database_commands.rs  lib.rs  lsp_commands.rs  main.rs  mcp_commands.rs  multiplayer_commands.rs  postgres.rs  ssh_tunnel.rs  storage_commands.rs  window_chrome.rs
src-tauri/src/config/: mod.rs  settings.schema.json
src-tauri/src/database/: mod.rs  mysql.rs  postgres.rs  sqlite_template.rs.example
src-tauri/src/import/: csv.rs  json.rs  mod.rs  test.rs
src-tauri/src/lsp/: _dump_tree.rs  backend.rs  context.rs  diagnostics.rs  documents.rs  mod.rs  parser.rs  position.rs  query_info.rs  schema.rs  scope.rs
src-tauri/src/lsp/completion/: fk_inference.rs  keywords.rs  mod.rs  tests.rs
src-tauri/src/mcp/: connection.rs  mod.rs  nodes.rs  pages.rs  reply.rs  schema.rs  server.rs  view.rs
src-tauri/src/multiplayer/: events.rs  mod.rs  node.rs  session.rs
src/Connection/: AddWorkspaceForm.tsx  ColorPicker.tsx  ConnectionForm.css  ConnectionForm.tsx  ConnectionItem.tsx  DotMenu.tsx  SshTunnelFields.tsx  Workspace.tsx  WorkspaceForm.tsx  WorkspaceHeader.tsx  WorkspaceList.tsx  WorkspacePanel.css  WorkspacePanel.tsx  WorkspacePopover.css  WorkspacePopover.tsx  highlightMatch.tsx  state.ts  types.ts  urlParts.ts  useWorkspacesMutation.ts  workspacePicker.css
src/app/: DarkModeSync.tsx  ThemeStylesheet.tsx  WindowBorder.css  WindowBorder.tsx  useApplyTheme.tsx  useAutoSaveDocument.tsx  useGetConfig.tsx  useHotkey.tsx  useInitTreesitter.tsx  useLoadDocument.tsx  useLoadWorkspaces.tsx  useTLStore.tsx
src/canvas/: CanvasApiPublisher.tsx  ClosePageConfirmModal.tsx  LassoOverlay.tsx  ReactFlowCanvas.css  ReactFlowCanvas.tsx  createChart.ts  defaults.ts  emptyDocument.ts  executeQueries.ts  forceDirectedLayout.ts  ids.ts  state.ts  theme.css  types.ts  useAutoSaveDocument.ts  useAutoSaveResults.ts  useCanvas.ts  useCreateChart.ts  useDrawTool.ts  useExecuteQueries.ts  useGetVariables.ts  useLoadDocument.ts  usePageActions.ts  useResultDropOnChat.ts  useSchemaForceLayout.ts  useSchemaSimulation.ts  useUndoHistory.ts  variables.ts
src/canvas/edges/: FloatingEdge.tsx  edgeColor.ts  floatingEdgeUtils.ts
src/canvas/hooks/: useAutoSaveDocument.ts  useAutoSaveResults.ts  useCanvas.ts  useDrawTool.ts  useExecuteQueries.ts  useGetVariablesForNode.ts  useInteractionState.ts  useLassoSelect.ts  useLoadDocument.ts  useMetaKeyHeld.ts  usePageActions.ts  usePlaceTool.ts  useResultDropOnChat.ts  useRubberBandSelect.ts  useSchemaForceLayout.ts  useSchemaSimulation.ts  useScrollFallthrough.ts  useSelectionHighlight.ts  useVariableDragHighlight.ts  useZoomTier.ts  useZoomVariable.ts
src/canvas/nodes/: HiddenHandles.tsx  NodeHeader.tsx  NodeIndicator.tsx  editorFocusRegistry.ts  node.css  useScrollFallthrough.ts
src/canvas/ui/: HideUiDot.css  HideUiDot.tsx  KeyboardShortcuts.tsx  Toolbar.css  Toolbar.tsx  ZoomIndicator.tsx  usePeekHotkeys.tsx  useUndoHistory.ts
src/command-palette/: CommandPalette.css  CommandPalette.tsx  useSearch.tsx
src/command-palette/commands/: about.tsx  calculateSchemaLayout.tsx  closePage.tsx  exportSelectedDataCsv.tsx  exportSelectedDataJson.tsx  hostSession.tsx  index.ts  joinSession.tsx  newPage.tsx  nextPage.tsx  organizeCanvas.tsx  rerunAllQueriesOnPage.tsx  rerunSelectedQueries.tsx  setTheme.tsx  toggleDarkMode.tsx  toggleUi.tsx  useGetConnectionCommands.tsx  useGoToPageCommands.tsx  useGoToQueryCommands.tsx  useGoToTableCommands.tsx  useQueryCommands.tsx  viewSchema.tsx
src/command-palette/details/: AboutDetails.tsx  ConnectionDetails.css  ConnectionDetails.tsx  DefaultDetails.tsx  ExportDetails.css  ExportDetails.tsx  QueryDetails.tsx  ReRunAllCommandsDescription.tsx  RerunQueriesDetails.css  RerunQueriesDetails.tsx  SqlPreview.tsx  ThemeDetails.css  ThemeDetails.tsx
src/components/: CustomBackground.tsx  CustomTitleBar.css  CustomTitleBar.tsx  JoinSessionDialog.tsx  SharePopover.css  SharePopover.tsx  TitleBarCollaborateButton.css  TitleBarCollaborateButton.tsx  TitleBarCommandPalette.tsx  TitleBarConnectionPicker.css  TitleBarConnectionPicker.tsx  TitleBarPageSelector.tsx  TitleBarShareButton.css  TitleBarShareButton.tsx  TitlebarLiveQueryNotification.css  TitlebarLiveQueryNotification.tsx
src/db/: IndexedDBService.ts  atomWithIndexedDB.ts  hooks.ts  index.ts
src/drop-zone/: DropZone.css  DropZone.tsx
src/mcp/: createNodes.ts  pageTools.ts  readTools.ts  textNodes.ts  useMcpBridge.ts  viewTools.ts
src/multiplayer/: InviteConfirmModal.tsx  RemoteCursorsLayer.css  RemoteCursorsLayer.tsx  diff.ts  diffApply.ts  identity.ts  state.ts  syncBridge.ts  syncBridgeUtils.ts  types.ts  useCursorBroadcast.ts  useDeepLinkInvite.ts  useMultiplayerControls.ts  useSyncBridge.ts
src/shapes/: index.ts
src/shapes/Ai/: Ai.css  (+5 more)
src/themes/: rosePineDawnTheme.ts  rosePineTheme.ts
src/tools/: AiPromptToolbar.tsx  CustomContextMenu.tsx  CustomToolbar.tsx  QueryToolbar.tsx  ResultToolbar.tsx  batchExecuteQueries.ts  createArrowBetweenShapes.tsx  useCreateChart.ts  useExecuteQuery.ts
src/updater/: UpdateDialog.tsx  useUpdateCheck.ts
(+162 files in other folders)
