[package]
name = "peek"
version = "2.5.6"
description = "A Database GUI"
authors = ["Damoon Rashidi"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "peek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
peek-lsp = { path = "crates/lsp" }
peek-mcp = { path = "crates/mcp" }
tauri = { version = "2.11.0", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-prevent-default = "3"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Lifts WKWebView's 60fps render cap on macOS 13–15 so high-refresh displays get
# native refresh rate; no-op on macOS 26+ (cap removed by Apple) and non-macOS.
# Uses a private WKPreferences feature — fine for our GitHub-distributed builds,
# but would be rejected by the Mac App Store.
tauri-plugin-macos-fps = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "mysql",
  "uuid",
  "chrono",
  "rust_decimal",
  "runtime-tokio",
  "tls-rustls",
] }
uuid = "1.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
rust_decimal = { version = "1.37.2", features = ["serde"] }
parquet = "56.1.0"
base64 = "0.22"
csv = "1.3.1"
qsv-sniffer = "0.11.0"
tiberius = { version = "0.12.3", features = ["chrono", "rust_decimal"] }
lsp-types = "0.97"
parking_lot = "0.12"
russh = "0.54"
tokio = { version = "1", features = [
  "net",
  "io-util",
  "macros",
  "sync",
  "rt",
  "rt-multi-thread",
  "time",
  "fs",
] }
url = "2"
iroh = "0.98"
iroh-docs = "0.98"
iroh-blobs = "0.100"
iroh-gossip = "0.98"
futures-lite = "2"
hex = "0.4"
data-encoding = "2"
bytes = "1"
anyhow = "1"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSColor", "NSWindow"] }

[profile.dev.package."*"]
opt-level = 1

[workspace]
members = ["crates/lsp", "crates/mcp"]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -2 }
module_name_repetitions = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.rust]
# `deny` rather than `forbid`: the tree-sitter SQL grammar binding in peek-lsp
# needs an audited `unsafe` FFI boundary, which `forbid` would make impossible.
unsafe_code = "deny"
dead_code = "deny"
unused_variables = "deny"
unused_imports = "deny"
unused_import_braces = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
