[package]
name = "peek-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
lsp-types = "0.97"
tree-sitter = "0.25"
tree-sitter-language = "0.1"
dashmap = "6"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
cc = "1"

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
